# grim_dealz

./: .env.example  .gitignore  CLAUDE.md  GrimDealz_Spec.docx
.github/workflows/: scrape-prices.yml
docs/plans/: 2026-02-22-feat-grimdealz-full-platform-build-plan.md  2026-02-27-feat-eu-market-expansion.md
reddit-bot/: package-lock.json  package.json  tsconfig.json
reddit-bot/src/: config.ts  filter.ts  index.ts  llm.ts  matcher.ts  reddit.ts  state.ts  telegram.ts  types.ts
scrapers/: __init__.py  base_store.py  db.py  enrich_catalog_codes.py  pyproject.toml  run_all.py  run_scrape.sh  seed_catalog.py
scrapers/stores/: __init__.py  discount_games_inc.py  frontline_gaming.py  game_nerdz.py  miniature_market.py
shared/schemas/: price_result.schema.json
web/: .eslintrc.json  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/api/revalidate/: route.ts
web/app/battleforce-tracker/: loading.tsx  page.tsx
web/app/deals/: error.tsx  loading.tsx  page.tsx
web/app/deals/[gameSystem]/: page.tsx
web/app/faction/[slug]/: error.tsx  loading.tsx  (+1 more)
web/app/factions/: loading.tsx  page.tsx
web/app/privacy/: page.tsx
web/app/search/: error.tsx  loading.tsx  page.tsx
web/components/client/: FactionFilter.tsx  MobileNav.tsx  PriceHistoryChart.tsx  SearchInput.tsx
web/components/server/: PriceComparisonTable.tsx  ProductCard.tsx
web/lib/: data.ts  format.ts  prisma.ts  types.ts
web/prisma/: schema.prisma  seed.ts
(+15 files in other folders)
